chore: updating schema and regenerate code
